[gd_scene load_steps=7 format=3 uid="uid://d2c8qnwy6t3gx"]

[ext_resource type="Texture2D" uid="uid://bvhseyj550xqb" path="res://Art/Pictures/Editor Only/file-image.svg" id="1_54a3l"]
[ext_resource type="Script" uid="uid://c2q7eo4hldid6" path="res://Scripts/Desktop/app_tray_icon.gd" id="2_bi8cs"]

[sub_resource type="Animation" id="Animation_jln48"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6t3sv"]
resource_name = "mouse_enter"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_v6dh8"]
resource_name = "mouse_exit"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vqob"]
_data = {
&"RESET": SubResource("Animation_jln48"),
&"mouse_enter": SubResource("Animation_6t3sv"),
&"mouse_exit": SubResource("Animation_v6dh8")
}

[node name="AppTrayIcon" type="Button"]
custom_minimum_size = Vector2(45, 45)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -22.5
offset_right = 22.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Fhghhwats"
theme_type_variation = &"DesktopIconButton"
action_mode = 0
icon = ExtResource("1_54a3l")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("2_bi8cs")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3vqob")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
